RESOLVED FIXED194209
REGRESSION(r240785): [SOUP] Broke cookie persistent storage
https://bugs.webkit.org/show_bug.cgi?id=194209
Summary REGRESSION(r240785): [SOUP] Broke cookie persistent storage
Michael Catanzaro
Reported 2019-02-03 19:48:05 PST
I broke cookie persistent storage in r240785 and should probably fix it.
Attachments
Patch (6.60 KB, patch)
2019-02-05 12:02 PST, Michael Catanzaro
no flags
Carlos Garcia Campos
Comment 1 2019-02-04 00:09:11 PST
Should probably fix it?
Michael Catanzaro
Comment 2 2019-02-04 07:05:14 PST
Yes, probably, unless we want all cookies to be lost at the end of the session. :) Seriously now, I made the mistake of assuming TestWebKitCookieManager would notice if I broke cookies. We should probably check somewhere that the persistent storage file is created.
Michael Catanzaro
Comment 3 2019-02-05 12:02:44 PST
WebKit Commit Bot
Comment 4 2019-02-06 00:06:02 PST
Comment on attachment 361207 [details] Patch Clearing flags on attachment: 361207 Committed r241013: <https://trac.webkit.org/changeset/241013>
WebKit Commit Bot
Comment 5 2019-02-06 00:06:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.