REGRESSION(r240785): [SOUP] Broke cookie persistent storage https://bugs.webkit.org/show_bug.cgi?id=194209

Reviewed by Carlos Garcia Campos.

Source/WebKit:

I missed a spot when moving the persistent storage parameters from NetworkProcess to
NetworkSession. They have to be initialized separately for the default session.

* UIProcess/soup/WebProcessPoolSoup.cpp:
(WebKit::WebProcessPool::platformInitializeNetworkProcess):

Tools:

Enhance TestCookieManager to ensure this doesn't happen again.

* TestWebKitAPI/Tests/WebKitGLib/TestCookieManager.cpp:
(testCookieManagerPersistentStorage):
(beforeAll):


Canonical link: https://commits.webkit.org/208771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241013 268f45cc-cd09-0410-ab3c-d52691b4dbfc